[gd_scene load_steps=12 format=3 uid="uid://c0qlono3kr04o"]

[ext_resource type="PackedScene" uid="uid://dy4yg8sk3htid" path="res://Characters/character_base.tscn" id="1_d4qk8"]
[ext_resource type="Texture2D" uid="uid://qh4778c8molj" path="res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png" id="2_ambf7"]
[ext_resource type="Script" path="res://Characters/Enemies/enemy_pig.gd" id="2_nee8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tk846"]
size = Vector2(19, 24)

[sub_resource type="Animation" id="Animation_oyrni"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x1fty"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_j42u5"]
resource_name = "idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_kjwgd"]
resource_name = "run_angry"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_75qqj"]
resource_name = "walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khcoh"]
_data = {
"RESET": SubResource("Animation_oyrni"),
"hurt": SubResource("Animation_x1fty"),
"idle": SubResource("Animation_j42u5"),
"run_angry": SubResource("Animation_kjwgd"),
"walk": SubResource("Animation_75qqj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rdwl"]
size = Vector2(24, 17)

[node name="EnemyPig" groups=["enemies"] instance=ExtResource("1_d4qk8")]
z_index = 50
collision_layer = 4
collision_mask = 3
script = ExtResource("2_nee8a")
speed_boost = 80.0
life = 1
speed = 60.0

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_ambf7")
hframes = 9
vframes = 6

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_tk846")

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_khcoh")
}

[node name="RayCasts" type="Node2D" parent="." index="3"]

[node name="RayCast2DGround" type="RayCast2D" parent="RayCasts" index="0"]
target_position = Vector2(0, 20)
collision_mask = 2

[node name="RayCast2DWall" type="RayCast2D" parent="RayCasts" index="1"]
rotation = 1.57079
target_position = Vector2(0, 20)
collision_mask = 2

[node name="RayCast2DPlayerDetector" type="RayCast2D" parent="RayCasts" index="2"]
modulate = Color(0.72549, 0.0235294, 0.6, 1)
target_position = Vector2(-90, 0)

[node name="ChangeDirectionTimer" type="Timer" parent="RayCasts" index="3"]
wait_time = 0.2
one_shot = true

[node name="Area2DPlayerDamage" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPlayerDamage" index="0"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_5rdwl")

[connection signal="timeout" from="RayCasts/ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="body_entered" from="Area2DPlayerDamage" to="." method="_on_area_2d_player_damage_body_entered"]
